--- a/animateCss/animate.html
+++ b/animateCss/animate.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS3 - Animate.css</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/animate.css/3.5.2/animate.css">
-    <link rel="stylesheet" href="../libs/reset.css">
+    <link rel="stylesheet" href="../venders/reset.css">
     <style>
         body {
             color: #00bcd4
         }
-        .box { position: absolute; height: 300px; width: 100%; top: 50%; margin-top: -200px; }
+        .box { position: absolute; height: 300px; width: 98%; top: 50%; margin-top: -200px; }
         .seed {
             line-height: 300px;
             font-size: 48px;
@@ -19,7 +19,6 @@
         }
         .page-title {
             margin-top: 50px;
-            width: 100%;
             text-align: center;
         }
     </style>
