--- a/animateCss/animate.html
+++ b/animateCss/animate.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS3 - Animate.css</title>
     <link rel="stylesheet" href="https://cdn.bootcss.com/animate.css/3.5.2/animate.css">
-    <link rel="stylesheet" href="../venders/reset.css">
+    <link rel="stylesheet" href="../vendor/styles/reset.css">
     <style>
         body {
             color: #00bcd4
